# nginx_Demo

./: CMakeLists.txt  GDB-command  main.c
monitor/: config  ngx_http_monitor_module.c
mytest/: ngx_http_mytest_module.c  ngx_http_mytest_module.h
upstream/: ngx_http_mytest_module.c  ngx_http_mytest_module.h
